# receipts_inserter_onion

./: Dockerfile  README.md  cargo.toml  push_to_docker_repo.sh
dependency_injection/: Cargo.toml
dependency_injection/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs  models.rs  repository.rs
domain/src/models/: item.rs  receipt.rs
domain/src/repository/: receipt.rs  receipt_repository.rs
infra/: Cargo.toml
infra/src/: lib.rs  mongo_impl.rs  provider.rs
infra/src/mongo_impl/: mongo_impl_receipt.rs
presentation/: Cargo.toml
presentation/src/: error.rs  handlers.rs  input.rs  main.rs
presentation/src/handlers/: get_receipt.rs  insert_receipt.rs  insert_receipts.rs
presentation/src/input/: item_dto.rs  receipt_dto.rs
use_case/: Cargo.toml
use_case/src/: lib.rs  tasks.rs
use_case/src/tasks/: get_receipt.rs  insert_receipt.rs
