[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dependency_injection = { path = "../dependency_injection"}
domain = { path = "../domain"}
serde = { version = "1.0.164", features = ["derive"] }
